# psmon

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.debug  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  vetur.config.js
backend/: __init__.py  frontend.py
backend/api/v1/: __init__.py  misc.py  monitor.py
backend/common/: logger.py  settings.py
backend/config/: settings.py
backend/db/: database.py
backend/job/: metrics.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: HelloWorld.vue  Plot.vue  Plotly.vue
frontend/src/router/: index.ts
frontend/src/types/: plotly.d.ts
frontend/src/views/: AboutView.vue  HomeView.vue
public/: index.html
